<resources>
    <string name="app_name">Soser App</string>
    <!-- Strings related to login -->
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">INGRESAR</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_user">Usuario inválido</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Campo requerido</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="usuario">Usuario</string>
    <string name="salir">Salir</string>
    <string name="nombre">Nombre: </string>
    <string name="bodega">Bodega: </string>
    <string name="bodegaUpperCase">BODEGA</string>
    <string name="nombreUpperCase">NOMBRE</string>
    <string name="material">Material</string>
    <string name="bin">Bin</string>
    <string name="digite_informaci_n_a_grabar">Digite información a grabar</string>
    <string name="grabar_tag">Grabar TAG</string>
    <string name="borrar_tag">Borrar TAG</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="marcaje_material_nombre">Nombre</string>
    <string name="marcaje_material_stockcode">Stockcode</string>
    <string name="marcaje_material_bin">BIN</string>
    <string name="marcaje_material_fecha_venc">Fecha ven.</string>
    <string name="marcaje_material_cantidad">Cantidad</string>
    <string name="selecci_n_de_bodega">Selección de bodega</string>
    <string name="gesti_n_de_bodegas">Gestión de bodegas</string>
    <string name="lector">Lector</string>
    <string name="esperando_lectura">Esperando lectura...</string>
    <string name="instrucciones_grabar_tag">Seleccione tipo de lectura, apunte el lector y presione el gatillo en dirección a los materiales</string>
    <string name="instruccion_borrar_tag">Seleccione tipo de lectura, apunte el lector y presione el gatillo en dirección al material</string>
    <string name="instruccion_leer_bin">Seleccione tipo de lectura, apunte el lector y presione el gatillo en dirección al material</string>
    <string name="leer_bin">Leer BIN</string>
    <string name="borrar_tag_confirmacion">La siguiente información será borrada del TAG</string>
    <string name="tipo_de_marcaje">Tipo de marcaje</string>
    <string name="unitaria">Unitaria</string>
    <string name="masiva">Masiva</string>
    <string name="instrucciones_consulta_masiva">Apunte lector y presione gatillo en dirección al TAG</string>
    <string name="nombre_material">Nombre Material</string>
    <string name="informaci_n_del_tag">Información del TAG...</string>
    <string name="cantidad_detectada">Cantidad detectada:</string>
    <string name="_0">0</string>
    <string name="lectura">Lectura</string>
    <string name="leyendo">Leyendo...</string>
    <string name="lectura_fallida">Lectura fallida, intentar de nuevo</string>
    <string name="tag_no_encontrado">No se encontró TAG</string>
    <string name="escanear">Escanear</string>
    <string name="leer_nfc">Acercar TAG a lector NFC y esperar lectura(No es necesario presionar gatillo para NFC)</string>
    <string name="tags_no_encontrados">No se encontraron TAGs</string>
    <string name="filtro">Filtro</string>
    <string name="_100">100</string>
    <string name="cantidad">Cantidad</string>
    <string name="_05_12_2019">05/12/2019</string>
    <string name="stockcode">Stockcode</string>
    <string name="aplicar">APLICAR</string>
    <string name="limpiar">LIMPIAR</string>
    <string name="fecha_inicio">Fecha Inicio</string>
    <string name="fecha_fin">Fecha Fin</string>
    <string name="fecha_de_expiraci_n">Fecha de expiración</string>
</resources>
