<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Consulta.ConsultaUnitariaLecturaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvConsultaUnitariaLecturaStockcode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/color1"
                android:textSize="18sp"
                android:text="@string/stockcode"/>

            <TextView
                android:id="@+id/tvConsultaUnitariaLecturaNombre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/color1"
                android:textSize="18sp"
                android:text="@string/nombre_material"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:gravity="top"
            android:layout_weight="1">

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvConsultaUnitariaLecturaInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color1"
                        android:textStyle="bold"
                        android:text="@string/informaci_n_del_tag"/>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>