<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/color2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/nombre"
                        android:textAlignment="textStart"
                        android:textSize="16sp"
                        android:textColor="@color/color1"
                        android:textColorHighlight="@color/color1"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvMenuNombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/nombreUpperCase"
                        android:textAlignment="textStart"
                        android:textSize="16sp"
                        android:textColor="@color/color1"
                        android:textColorHighlight="@color/color1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/bodega"
                        android:textAlignment="textStart"
                        android:textSize="16sp"
                        android:textColor="@color/color1"
                        android:textColorHighlight="@color/color1"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvMenuBodega"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/bodegaUpperCase"
                        android:textAlignment="textStart"
                        android:textSize="16sp"
                        android:textColor="@color/color1"
                        android:textColorHighlight="@color/color1"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <ListView
                android:id="@+id/lvMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>