<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Marcaje.MarcajeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarMarcaje"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:contentInsetStart="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_weight="1">
                    <Button
                        android:id="@+id/btnMarcajeAtras"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/ic_arrow_back_black_24dp"
                        android:backgroundTint="@color/colorWhite"
                        android:layout_marginStart="10dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textColor="@color/colorWhite"
                        android:text="@string/tipo_de_marcaje"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                </LinearLayout>



            </LinearLayout>

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color5"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <android.support.design.widget.BottomNavigationView
                android:id="@+id/navigationMarcaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/navigation_marcaje"
                app:itemBackground="@color/color5"
                app:itemTextColor="@drawable/navigation_selector"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/color1"
                android:textSize="18sp"
                android:text="@string/digite_informaci_n_a_grabar"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1">
            <FrameLayout
                android:id="@+id/marcaje_fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </FrameLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">


            <Button
                android:id="@+id/btnMarcajeGrabarTAG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grabar_tag"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/color5"
                android:textColor="@color/colorWhite"/>

            <Button
                android:id="@+id/btnMarcajeBorrarTAG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/borrar_tag"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/color5"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>